tests/ui/macros/expr_2021_inline_const.edi2024.stderr
error: no rules expected keyword `const`
  --> $DIR/expr_2021_inline_const.rs:23:12
   |
LL | macro_rules! m2021 {
   | ------------------ when calling this macro
...
LL |     m2021!(const { 1 });
   |            ^^^^^ no rules expected this token in macro call
   |
note: while trying to match meta-variable `$e:expr_2021`
  --> $DIR/expr_2021_inline_const.rs:7:6
   |
LL |     ($e:expr_2021) => {
   |      ^^^^^^^^^^^^

error: aborting due to 1 previous error

